slurm-lambda1-26859.out
*** SLURM BATCH JOB 'test_job' STARTING ***
*** Activating environment cs236781-hw ***
  File "run_exp.py", line 6
    <<<<<<< Updated upstream
    ^
SyntaxError: invalid syntax
*** SLURM BATCH JOB 'test_job' DONE ***
